<resources>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">注册并体验</string>
    <string name="exist_user">已有用户</string>
    <string name="sex_tooltip">请选择您的性别</string>
    <string name="height_tooltip">请选择您的身高</string>
    <string name="age_tooltip">请选择您的年龄</string>
    <string name="wight_tooltip">请选择您的体重</string>
    <string name="sign_out">退出体验</string>
    <string name="experience_text">体验中...</string>
    <string name="search_tooltip">请输入完整的昵称</string>
    <string name="work_text">请选择您的下班时间</string>
    <string name="date_text">请选择您的约会时间</string>
    <string name="data_user_text">约会对象</string>
    <string name="start">开始体验</string>
    <string name="open_door">打开车门</string>
    <string name="close_door">关闭车门</string>
    <string name="other">退出当前用户</string>
    <string name="meet_text">请选择您的会议时间</string>
    <string name="meet_name">会议名称</string>
    <string name="travel_text">自驾游路线</string>
    <string name="travel_time">请选择您的自驾游时间</string>
    <string name="travel1">总统府</string>
    <string name="travel2">钟山风景区</string>
    <string name="travel3">夫子庙秦淮风光</string>
    <string name="edit">edit</string>
    <string name="delete">删除</string>
    <string name="travel_mode">自驾游模式</string>
    <string name="meet_mode">会议模式</string>
    <string name="commute_mode">通勤模式</string>
    <string name="app_name">智能终端</string>
    <string name="voice_text">远程召唤车</string>
    <string name="lab_submit">体验</string>
    <string name="lab_cancel">取消</string>
    <string name="login">登录</string>
    <string name="modify">修改</string>
</resources>