<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/activity_bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal='true'>
        <com.xuexiang.xui.widget.button.roundbutton.RoundButton
            android:id="@+id/exist_btn"
            style="@style/RoundButton.Gray"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|top"
            android:background="@color/control_bg"
            android:textColor="@color/white"
            android:fontFamily="@font/pingfang"
            android:text="@string/exist_user" />
        <com.xuexiang.xui.widget.imageview.RadiusImageView
            android:clickable="true"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/photo"
            app:riv_border_color="@color/xui_config_color_gray_6"
            app:riv_border_width="0px"
            app:riv_is_circle="true"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageView"
            app:riv_selected_border_color="@color/xui_config_color_gray_4"
            app:riv_selected_border_width="1px"
            app:riv_selected_mask_color="@color/xui_config_color_gray_8"/>

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="500dp"-->
<!--            android:layout_height="200dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:src="@mipmap/icon"-->
<!--            tools:srcCompat="@tools:sample/avatars" />-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center|center_horizontal"
                    android:orientation="horizontal">


                    <com.xuexiang.xui.widget.edittext.ValidatorEditText
                        style="@style/EditText.bg"
                        android:layout_width="440dp"
                        android:layout_height="40dp"
                        android:singleLine="true"
                        android:id="@+id/user_name"
                        android:hint="请输入您的昵称"
                        android:fontFamily="@font/pingfang"
                        app:met_iconLeft="@mipmap/icon" />
<!--                    android:background="@color/control_bg"-->

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal"-->
<!--                    >-->

<!--                </LinearLayout>-->
                <com.xuexiang.xui.widget.spinner.materialspinner.MaterialSpinner
                    style="@style/Material.SpinnerStyle"

                    android:id="@+id/sexSpinner"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@color/control_bg"
                    android:hint="@string/sex_tooltip"
                    android:fontFamily="@font/pingfang"

                    app:ms_entries="@array/sex"/>
                <com.xuexiang.xui.widget.spinner.materialspinner.MaterialSpinner
                    style="@style/Material.SpinnerStyle"
                    android:id="@+id/heightSpinner"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/height_tooltip"
                    android:fontFamily="@font/pingfang"
                    android:background="@color/control_bg"
                    app:ms_entries="@array/height" />


            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"

                    android:gravity="center|center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <com.xuexiang.xui.widget.spinner.materialspinner.MaterialSpinner
                        style="@style/Material.SpinnerStyle"
                        android:id="@+id/ageSpinner"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:background="@color/control_bg"
                        android:fontFamily="@font/pingfang"
                        android:hint="@string/age_tooltip"
                        app:ms_entries="@array/age"/>
                    <com.xuexiang.xui.widget.spinner.materialspinner.MaterialSpinner
                        style="@style/Material.SpinnerStyle"
                        android:id="@+id/weightSpinner"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:background="@color/control_bg"

                        android:layout_marginLeft="40dp"
                        android:hint="@string/wight_tooltip"
                        android:fontFamily="@font/pingfang"
                        app:ms_entries="@array/weight"/>

                </LinearLayout>


                <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                    style="@style/RoundButton.Blue"
                    android:layout_marginTop="10dp"
                    android:layout_width="440dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:background="#0A62CA"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:fontFamily="@font/pingfang"
                    android:text="@string/login_text"
                    android:id="@+id/button" />



            </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
